constraint tree